--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,12 @@
+/*Showcase*/
 .top{
   height: 100vh;
+}
+.budget-income,
+.budget-expenses {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* After showcase part */
 .add-type,
