--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 .top {
   height: 40vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
-    url("back2.jpg");
+    url("back.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
